# twibint

./: .gitignore  Cargo.toml  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: rust.yml
benches/: README.md  benches.py  biguint.rs  num-bigint.rs  plotting.py  run_benchmarks.py
benches/bencher/: Cargo.toml
benches/bencher/benches/: biguint.rs
benches/bencher/src/: lib.rs
examples/: sqrt_2.rs
src/: bigint.rs  lib.rs  macros.rs  ops.rs  rand.rs  test.rs
src/bigfloat/: fmt.rs  froms.rs  mod.rs  tests.rs
src/bigfloat/ops/: addsub.rs  mod.rs  mul.rs  neg.rs  shift.rs  tests.rs
src/bigint/: fmt.rs  froms.rs  mod.rs  test.rs
src/bigint/ops/: addsub.rs  bitwise.rs  divrem.rs  mod.rs  mul.rs  neg.rs  pow.rs  shift.rs  test.rs  truediv.rs
src/biguint/: fmt.rs  froms.rs  mod.rs  test.rs
src/biguint/digits_vec/: mod.rs  test.rs
src/biguint/ops/: addsub.rs  bitwise.rs  divrem.rs  mod.rs  mul.rs  pow.rs  shift.rs  test.rs  truediv.rs
src/biguint/ops/algorithms/add/: mod.rs
src/biguint/ops/algorithms/div/: burnikel_ziegler.rs  mod.rs  multiplication_helper.rs  newton_raphson.rs
src/biguint/ops/algorithms/rsub/: mod.rs  x86_64.rs
src/biguint/ops/algorithms/sub/: mod.rs
src/biguint/ops/implem_choices/: add.rs  mod.rs  mul.rs  parallel_add.rs  sub.rs
src/biguint/ops/implem_choices/add/: mod.rs  x86_64.rs
src/biguint/ops/implem_choices/div/: mod.rs  newton_raphson.rs
src/biguint/ops/implem_choices/mul/: karatsuba.rs  mod.rs  x86_64.rs
src/biguint/ops/implem_choices/rsub/: mod.rs
src/biguint/ops/implem_choices/sub/: mod.rs  x86_64.rs
src/digits_vec/: mod.rs  test.rs
src/errors/: mod.rs
src/export/: mod.rs  v1.rs
src/export/test_files/: fact_500_v1.tw  sqrt_2_v1.tw
src/ops/: addsub.rs  bitwise.rs  divrem.rs  mod.rs  mul.rs  shift.rs  test.rs
src/py_bindings/: bigint.rs  bigint_py.rs  bigsint.rs  biguint.rs  biguint_py.rs  errors.rs  mod.rs
src/traits/: check_implementations.rs  digit.rs  mod.rs
tests/: test_bigint.py  test_biguint.py
