[package]
name = "twibint"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Crate for arithmetic on arbitrarily large integers. Provides Python bindings as well."
repository = "https://github.com/twiby/twibint/"
readme = "README.md"
keywords = ["integers", "arithmetic", "large", "python"]
categories = ["mathematics"]

[lib]
name = "twibint"

[dependencies.pyo3]
version = "0.19.0"
features = ["extension-module"]
optional = true

[dependencies.rand]
version = "0.8"

[dev-dependencies]
criterion = "0.5"
num-bigint = "0.4"
typed_test_gen = "0.1"

[[bench]]
name = "biguint"
harness = false

[[bench]]
name = "num-bigint"
harness = false
