[package]
name = "twibint"
version = "0.2.6"
edition = "2021"
license = "GPL-3.0-only"
description = "Crate for arithmetic on arbitrarily large integers. Provides Python bindings as well."
repository = "https://github.com/twiby/twibint/"
readme = "README.md"
keywords = ["integers", "arithmetic", "large", "python"]
categories = ["mathematics"]

[lib]
name = "twibint"

[features]
default = ["unsafe"]
unsafe = []

[dependencies.pyo3]
version = "0.19.0"
features = ["extension-module"]
optional = true

[dependencies.rand]
version = "0.8"
optional = true

[dev-dependencies]
num-bigint = "0.4"
typed_test_gen = "0.1"
